# bezier

./: .gitattributes  .gitignore  .travis.yml  .travis_davidSDK.sh  .travis_ensensoSDK.sh  .travis_pcl.sh  .travis_vtk.sh  CMakeLists.txt  LICENSE.txt  README.md  bezier.rosinstall  package.xml
bezier/: CMakeLists.txt  package.xml
bezier_application/: CMakeLists.txt  package.xml
bezier_application/config/: robot_state_visualize.rviz
bezier_application/launch/: bezier_application.launch  bezier_application_m20ia.launch  bezier_application_m900ib.launch  bezier_application_r1000ia.launch  fanuc_m20ia.launch  fanuc_m20ia_painting.launch  fanuc_m20ia_surfacing.launch
bezier_application/meshes/: TableFSW.ply  TableFix.ply  complicated_square.ply  cube_pos_reference.ply  oriented_complicated_mesh.ply  oriented_complicated_mesh_default.ply  oriented_pyramid.ply  oriented_pyramid_default.ply  plane.ply  plane_default.ply  pyramid.ply  pyramid_default.ply
bezier_application/meshes/complicated_square/: Readme.txt  complicated_square_default.ply
bezier_application/meshes/cube_defaut_reference/: Readme.txt
bezier_application/meshes/cube_defect_reference/: cube_pos_reference.ply
bezier_application/meshes/cylinder/: cylinder.blend  cylinder.ply  cylinder_sd.ply  flat_cylinder.blend  flat_cylinder.ply  flat_cylinder_rotated.ply
bezier_application/meshes/dac/: cad_defect.ply  scan.ply  scan_defect.ply
bezier_application/meshes/demo/: Readme.txt  demo.ply  demo_defect.ply  pyramid.ply  pyramid_defect.ply
bezier_application/meshes/dilatedMeshes/: mesh_0.ply  mesh_1.ply  mesh_2.ply  mesh_3.ply  mesh_5.ply  mesh_6.ply
bezier_application/meshes/face/: Readme.txt  face.ply  face_defect.ply
bezier_application/meshes/ocean/: complex_shape.blend  complex_shape.ply  ocean.blend  ocean.ply
bezier_application/meshes/plane/: Readme.txt  plane.blend  plane.ply  plane_default.ply  plane_defect.ply
bezier_application/meshes/plane_holes/: plane.blend  plane_big_hole.ply  plane_no_hole.ply  plane_small_hole.ply
bezier_application/meshes/pyramid/: Readme.txt
bezier_application/src/: bezier_application.cpp  painting.cpp  painting_application.cpp  surfacing.cpp  surfacing_application.cpp
bezier_application/tests/: roslaunch_test_bezier_application.xml
bezier_library/: CMakeLists.txt  package.xml
bezier_library/doc/: README.md  README_append_input_mesh.md  README_bezier_grinding_surfacing.md  README_estimate_extrication_slicing_plane.md  README_estimate_global_mesh_normal.md  README_estimate_slicing_orientation.md  README_filter_extrication_trajectory.md  README_filter_neighbor_poses_too_close.md  README_generate_intermediate_poses_on_line.md  README_generate_robot_poses_along_stripper.md  README_harmonize_line_orientation.md  README_invert_x_axis_of_poses.md  README_remove_isolated_triangles.md  README_save_mesh.md  README_slice_mesh_with_plane.md  rosdoc.yaml
bezier_library/documentation/: README.md  bezier_library.doxy.in
bezier_library/include/bezier_library/: bezier_grinding_surfacing.hpp  bezier_library.hpp  bezier_painting.hpp  bezier_params_observer.hpp  bezier_tire_machining.hpp  error_observer.h
bezier_library/meshes/: REAMDE.md
bezier_library/src/: bezier_grinding_surfacing.cpp  bezier_library.cpp  bezier_painting.cpp  bezier_surfacing.cpp  bezier_tire_machining.cpp
doc/: README.md  README_apply_lean_angle.md  README_compute_normals.md  README_dilate.md  README_display_mesh.md  README_display_trajectory.md  README_estimate_global_mesh_normal.md  README_estimate_grinding_slicing_planes.md  README_keep_upper_part_of_dilated_mesh.md  README_slice_mesh_with_planes.md  rosdoc.yaml
include/bezier/: append_bezier_exception.hpp  bezier_library.hpp  error_observer.hpp  grinding_surfacing.hpp  painting.hpp  params_observer.hpp  tire_machining.hpp
include/bezier_library/: append_bezier_exception.hpp  bezier_grinding_surfacing.hpp  bezier_library.hpp  bezier_painting.hpp  bezier_tire_machining.hpp
meshes/: REAMDE.md  dilated_mesh.stl  dilated_mesh_.stl  extrication_mesh.stl
src/: bezier_library.cpp  bezier_painting.cpp  bezier_tire_machining.cpp  painting.cpp  surfacing.cpp  tire_machining.cpp
