<?xml version="1.0"?>
<package format="2">
  <name>bezier</name>
  <version>0.0.1</version>
  <description>Robot path planner for complex 6 DOF surfacing trajectories</description>
  <author>Francois Lasson, Kévin Bolloré - Institut Maupertuis</author>
  <maintainer email="victor.lamoine@institutmaupertuis.fr">Victor Lamoine</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
