<?xml version="1.0"?>
<package format="2">
  <name>bezier_application</name>
  <version>0.0.1</version>
  <description>Application example of bezier_library on a Fanuc M-10iA robot</description>
  <author>Francois Lasson, Kévin Bolloré - Institut Maupertuis</author>
  <maintainer email="victor.lamoine@institutmaupertuis.fr">Victor Lamoine</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>bezier_library</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_export_depend>bezier_library</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>bezier_library</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
</package>
