<?xml version="1.0"?>
<package format="2">
  <name>bezier_application</name>
  <version>0.0.1</version>
  <description>Application example of bezier_library on a Fanuc robot</description>
  <author>Francois Lasson, Kévin Bolloré, Papa Libasse Sow - Institut Maupertuis</author>
  <maintainer email="victor.lamoine@institutmaupertuis.fr">Victor Lamoine</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>bezier_library</depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <depend>roscpp</depend>
  <depend>rviz_visual_tools</depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <exec_depend>fanuc_m20ia_moveit_config</exec_depend>
</package>
