<?xml version="1.0"?>
<package format="2">
  <name>bezier_application</name>
  <version>0.0.2</version>
  <description>Application example of bezier_library with a Fanuc robot</description>
  <author>Francois Lasson, Kévin Bolloré, Papa Libasse Sow - Institut Maupertuis</author>
  <maintainer email="victor.lamoine@gmail.com">Victor Lamoine</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>bezier_library</depend>
  <depend>fanuc_m20ia_support</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>roscpp</depend>
  <depend>rviz_visual_tools</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>fanuc_m20ia_moveit_config</exec_depend>
</package>
