<?xml version="1.0"?>
<package format="2">
  <name>bezier_library</name>
  <version>0.0.1</version>
  <description>Robot path planner for complex 6 DOF surfacing trajectories</description>
  <author>Francois Lasson, Kévin Bolloré - Institut Maupertuis</author>
  <maintainer email="victor.lamoine@institutmaupertuis.fr">Victor Lamoine</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>rviz_visual_tools</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>moveit_visual_tools</build_export_depend>
  <build_export_depend>rviz_visual_tools</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>moveit_visual_tools</exec_depend>
  <exec_depend>rviz_visual_tools</exec_depend>

  <export>
    <rosdoc config="doc/rosdoc.yaml" />
  </export>
</package>
